@@ -5,7 +5,7 @@
 
     <groupId>io.github.0xorigin</groupId>
     <artifactId>query-filter-builder</artifactId>
-    <version>0.0.1-alpha</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>QueryFilterBuilder</name>
@@ -48,7 +48,6 @@
     </distributionManagement>
 
     <properties>
-        <package.version>0.0.1</package.version>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -118,6 +117,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
 
         </plugins>
